cmake_minimum_required(VERSION 3.0)
project(SFMLPong)
file(GLOB_RECURSE SFMLPong_SOURCES "SFMLPong/Source/*.cpp")
file(GLOB_RECURSE SFMLPong_HEADERS "SFMLPong/Include/*.h")
set(SFML_ROOT "sfmldir" CACHE PATH "sfmldir")
foreach (_headerFile ${SFMLPong_HEADERS})
    get_filename_component(_dir ${_headerFile} PATH)
    list (APPEND SFMLPong_INCLUDE_DIRS ${_dir})
endforeach()
list(APPEND SFMLPong_INCLUDE_DIRS ${SFML_INCLUDE})
list(REMOVE_DUPLICATES SFMLPong_INCLUDE_DIRS)
include_directories(${SFMLPong_INCLUDE_DIRS})
add_executable(SFMLPong ${SFMLPong_SOURCES})
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
set(SFML_STATIC_LIBRARIES "use static sfml libs" TRUE)
find_package(SFML 2 REQUIRED graphics window system audio)
if(SFML_FOUND)
  include_directories(${SFML_INCLUDE_DIR})
  target_link_libraries(SFMLPong ${SFML_LIBRARIES})
endif()
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIR})
if (OPENGL_FOUND)
  target_link_libraries(SFMLPong ${OPENGL_LIBRARIES})
endif()
  target_link_libraries(SFMLPong ${SFML_DEPENDENCIES})
install(FILES Assets/ball.png Assets/paddle.png Assets/beep.ogg Assets/boop.ogg Assets/font.ttf DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/Assets)
install(TARGETS SFMLPong DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
include(InstallRequiredSystemLibraries)
include(CPack)
